--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome_username">Welcome Username!</string>
     <string name="feb_01_2025">Feb,01,2025</string>
-    <string name="social_situation_i_hit_chest_today">Social Situation: I hit chest today!</string>
+    <string name="trigger_i_hit_chest_today">Trigger <q></q>: I hit chest today!</string>
     <string name="happy">Happy</string>
     <string name="select_date_drop_down">Select Date</string>
     <string name="select_mood_drop_down">Select Mood</string>
