--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -80,4 +80,16 @@
     <string name="reason_optional">Reason (Optional)</string>
     <string name="save">Save</string>
     <string name="select_social_situation">Select Social Situation:</string>
+    <string name="location_unknown">Location: Unknown</string>
+    <string name="welcome_administrator">Welcome Administrator</string>
+    <string name="create_account_and_login">Create Account and Login</string>
+    <string name="re_enter_password">Re-enter Password</string>
+    <string name="password_user_sign_up">Password</string>
+    <string name="username_user_sign_up">Username</string>
+    <string name="user_login">User Login</string>
+    <string name="sign_in_user">Sign In</string>
+    <string name="sign_up_user">Sign Up</string>
+    <string name="don_t_have_an_account">Don\'t Have an account ?</string>
+    <string name="username_user_login">username</string>
+    <string name="password_user_login">password</string>
 </resources>
