--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -98,4 +98,35 @@
     <string name="welcome_username_home_moods">Welcome Username</string>
     <string name="filter_by_mood">Filter by Mood</string>
     <string name="search_moods">Search moods</string>
+    <string name="back_button_add_mood">Back_button</string>
+    <string name="mood_add_mood">Mood</string>
+    <string name="trigger_add_mood">Trigger</string>
+    <string name="trigger_add_mood_edittext">Trigger</string>
+    <string name="social_situation_add_mood">Social Situation</string>
+    <string name="public_mood_entry_add_mood">Public Mood Entry</string>
+    <string name="geolocation_optional_add_mood">Geolocation (Optional)</string>
+    <string name="back_community">Back</string>
+    <string name="community_map_community_map">Community Map</string>
+    <string name="public_mood_entry_edit_delete_mood">Public Mood Entry</string>
+    <string name="back_button_edit_delete_mood">Back button</string>
+    <string name="delete_button_edit_delete_mood">delete_button</string>
+    <string name="mood_event_edit_delete_mood">Mood Event</string>
+    <string name="select_image_optional_edit_delete_mood">Select Image (Optional)</string>
+    <string name="trigger_edit_delete_mood">Trigger</string>
+    <string name="mood_edit_delete_mood">Mood</string>
+    <string name="trigger_edit_delete_mood_edit_text">Trigger</string>
+    <string name="social_situation_edit_delete_mood">Social Situation</string>
+    <string name="geolocation_optional_edit_delete_mood">Geolocation (Optional)</string>
+    <string name="save_edit_delete_mood">Save</string>
+    <string name="friend_mood_details_edit_delete_mood">Friend Mood Details</string>
+    <string name="comments_friend_mood">Comments</string>
+    <string name="comments_mood_details">Comments</string>
+    <string name="user_details_personal_profile">User Details</string>
+    <string name="username_personal_profile">Username:</string>
+    <string name="username_search_user">Username</string>
+    <string name="select_image_for_mood_event_followed">Select image for mood event</string>
+    <string name="username_followed">Username</string>
+    <string name="select_image_for_mood_event_comments">Select image for mood event</string>
+    <string name="select_image_for_mood_event_comments_imagebutton">Select image for mood event</string>
+    <string name="comments_comments">Comments</string>
 </resources>
