--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -152,4 +152,5 @@
     <string name="moods_user_login">Moods</string>
     <string name="moods_signup">Moods</string>
     <string name="sign_up_signup">Sign up</string>
+    <string name="search_user">search user</string>
 </resources>
